# car-sharing

./: .env  .gitignore  Cargo.toml  README.md  build.sh
backend/: .gitignore  Cargo.toml  README.md  build.sh
backend/integration-tests/: .gitignore  Cargo.toml  test.json
backend/integration-tests/src/: tests.rs
backend/res/: car_sharing.wasm
backend/src/: lib.rs
backend/tests/: test_basics.rs
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/.next/: react-loadable-manifest.json  trace
frontend/.next/cache/eslint/: .cache_fuq6ub
frontend/.next/server/: _error.js  middleware-react-loadable-manifest.js
frontend/.next/server/pages/: _app.js  _error.js  index.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  node_modules_cbw-sdk_dist_index_js.js  node_modules_coinbase_wallet-sdk_dist_index_js.js  node_modules_isows__esm_native_js.js  node_modules_metamask_sdk_dist_browser_umd_metamask-sdk_js.js  node_modules_near-wallet-selector_ethereum-wallets_node_modules_isows__esm_native_js.js  node_modules_near-wallet-selector_ethereum-wallets_node_modules_wagmi_core_dist_esm_exports_i-bfb44b.js  node_modules_safe-global_safe-apps-provider_dist_index_js.js  webpack.js  (+5 more)
frontend/src/: App.tsx  config.js  index.tsx
frontend/src/components/: AccountCreation.js  UserProfile.js  cards.js  navigation.js
frontend/src/pages/: _app.js  index.js  profile.js
frontend/src/utils/: near.js  node.ts  storage.ts  types.ts  useContract.js
src/: lib.rs
(+16 files in other folders)
