[package]
name = "car_sharing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.5.0"
calimero-sdk = { git = "https://github.com/calimero-network/core" }
borsh = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
near-token = "0.3.0"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true